# graphic-lecture

./: CMakeLists.txt  README.md
scripts/: main.cpp
scripts/component/: color.h  light.h  material.h
scripts/geometry/: bvh.cpp  bvh.h  mesh.cpp  mesh.h  model.cpp  model.h
scripts/linear/: box.h  mat.h  qut.h  ray.h  sphere.h  transform.h  vec.h
scripts/postprocess/: fxaa.h  vignette.h
scripts/render/: algorithm.h  raycasthit.h  tracing.h
scripts/scene/: camera.cpp  camera.h  scene.cpp  scene.h
scripts/utility/: benchmark.h  buffer.cpp  buffer.h  context.cpp  context.h  objimporter.cpp  objimporter.h
